GNOME Bugzilla – Bug 751682
dashdemux: template parsing does not recognize $$$
Last modified: 2015-08-16 13:38:26 UTC
The standard says that segment templates contain identifiers separated by $, in the format $identifier$. The standard also says that $$ should be interpreted as $. The implementation fails to recognize a $$ after a $ that ends an identifier, eg $Time$$$
Created attachment 306334 [details] [review] proposed patch Also corrects templates starting with $$
Review of attachment 306334 [details] [review]: commit e2d112639145b8a1e2a9611667d106b13d270f7e Author: Florin Apostol <florin.apostol@oregan.net> Date: Mon Jun 29 22:18:38 2015 +0100 dashdemux: corrected recognition of $$$ in segment templates fixed recognition of $$ after a $ that ends an identifier, eg $Time$$$ https://bugzilla.gnome.org/show_bug.cgi?id=751682